data/derived/comb/progs/unify/prog5857.ml.out
Characters 70-76:
  (let func output = ((f b),(f b) = b) in func b) 
                                          ^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
